Gestion Empleados + validacion

--- a/di.proyecto.clase/di.proyecto.clase.csproj
+++ b/di.proyecto.clase/di.proyecto.clase.csproj
@@ -267,6 +267,9 @@
     <Compile Include="Vista\ControlesUsuario\UCVehiculoNuevo.xaml.cs">
       <DependentUpon>UCVehiculoNuevo.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Dialogos\DAnyadirEmpleado.xaml.cs">
+      <DependentUpon>DAnyadirEmpleado.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Dialogos\DAnyadirProducto.xaml.cs">
       <DependentUpon>DAnyadirProducto.xaml</DependentUpon>
     </Compile>
@@ -321,6 +324,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Vista\ControlesUsuario\UCVehiculoNuevo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Vista\Dialogos\DAnyadirEmpleado.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
