--- a/di.proyecto.clase/packages.config
+++ b/di.proyecto.clase/packages.config
@@ -3,6 +3,8 @@
   <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.2.4" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="3.1.1" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.WinForms.v12" version="12.0.0.0" targetFramework="net461" />
   <package id="NLog" version="4.6.7" targetFramework="net461" />
   <package id="NLog.Config" version="4.6.7" targetFramework="net461" />
   <package id="NLog.Schema" version="4.6.7" targetFramework="net461" />
