--- a/di.proyecto.clase/packages.config
+++ b/di.proyecto.clase/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.2.4" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="3.1.1" targetFramework="net461" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net461" />
