--- a/di.proyecto.clase/di.proyecto.clase.csproj
+++ b/di.proyecto.clase/di.proyecto.clase.csproj
@@ -61,6 +61,7 @@
       <HintPath>..\packages\MaterialDesignThemes.3.1.1\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.2.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.ReportViewer.WinForms">
       <HintPath>..\packages\Microsoft.ReportViewer.WinForms.v12.12.0.0.0\lib\Microsoft.ReportViewer.WinForms.dll</HintPath>
     </Reference>
@@ -495,6 +496,7 @@
     <None Include="Properties\DataSources\di.proyecto.clase.Modelo.productos.datasource" />
     <None Include="Properties\DataSources\di.proyecto.clase.Modelo.proveedor.datasource" />
     <None Include="Properties\DataSources\di.proyecto.clase.Modelo.tipoproducto.datasource" />
+    <None Include="Properties\DataSources\di.proyecto.clase.Servicios.ProductoServicio.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
