--- a/di.proyecto.clase/di.proyecto.clase.csproj
+++ b/di.proyecto.clase/di.proyecto.clase.csproj
@@ -108,6 +108,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Cache\UserLoginCache.cs" />
     <Compile Include="Informes\DSProductosCrystal.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
