Mejora UI de Login + Validacion de  nuevos errores

--- a/di.proyecto.clase/di.proyecto.clase.csproj
+++ b/di.proyecto.clase/di.proyecto.clase.csproj
@@ -41,6 +41,9 @@
     <StartupObject>
     </StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.3.0\lib\net45\EntityFramework.dll</HintPath>
@@ -443,6 +446,8 @@
     <Resource Include="Images\save.png" />
     <Resource Include="Images\undo.png" />
     <Resource Include="Images\Logo.png" />
+    <Resource Include="icono.ico" />
+    <Resource Include="icon.ico" />
     <Content Include="Modelo\BDTaller.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BDTaller.edmx</DependentUpon>
