Cambio de colores y Diseño plantilla Factura + Intento fallido de estilos

--- a/di.proyecto.clase/App.config
+++ b/di.proyecto.clase/App.config
@@ -16,5 +16,8 @@
   <connectionStrings>   
     <add name="tallerEntities" connectionString="metadata=res://*/Modelo.BDTaller.csdl|res://*/Modelo.BDTaller.ssdl|res://*/Modelo.BDTaller.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=mysql;database=taller&quot;" providerName="System.Data.EntityClient" />
     <add name="taller" connectionString="Server=localhost;Database=taller;Uid=root;Pwd=mysql" providerName="MySQL"/> 
+    <add name="di.proyecto.clase.Properties.Settings.tallerConnectionString"
+      connectionString="server=localhost;user id=root;password=mysql;persistsecurityinfo=True;database=taller"
+      providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
