--- a/di.proyecto.clase/di.proyecto.clase.csproj
+++ b/di.proyecto.clase/di.proyecto.clase.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Servicios\ClienteServicio.cs" />
     <Compile Include="Servicios\EmpleadoServicio.cs" />
     <Compile Include="Servicios\IServicioGenerico.cs" />
+    <Compile Include="Servicios\PedidosServicio.cs" />
     <Compile Include="Servicios\Pieza_averiaServicio.cs" />
     <Compile Include="Servicios\ProductoServicio.cs" />
     <Compile Include="Servicios\ServicioGenerico.cs" />
